# the-container-store

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build-dockers.yml  check-version.yml  codeql-analysis.yml  run-org-policies.yml
docbuilder/: Dockerfile  README.md  apt-requirements.txt  python-requirements.txt
docbuilder/_ext/: sphinx_json.py
docbuilder/assets/: footer.tpl  header.tpl
docbuilder/scripts/: build_sphinx_docs.py  confluence.conf
docs/: conf.py  index.rst
docs/docbuilder/: index.rst
docs/haiku/: build_requirements.rst  buildsite.sh  changelog.rst  conf.py  contribution.rst  index.rst  quick_start.rst  requirements.rst  sagemaker_hints.rst  tools.rst  trace_matrix.rst
docs/haiku/guides/: coding_guidelines.rst  index.rst  module_approvers.rst  pr_review_guidelines.rst
haiku/: Dockerfile  pyproject.toml  python_requirements.txt  setup.cfg  yum_requirements.txt
haiku/dependencies/: install_counterr.sh  install_fastp.sh  install_fastqc.sh
haiku/src/haiku/: config.py  logger.py  plotting.py
