[metadata]
name = haiku
author = Aaron Berlin
author_email = aaron.berlin@sequencinghealth.com
description = Local Analysis Environment for Applications Research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GenapsysInc/Haiku
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
haiku = py.typed
